# Document-Search-Program

./: CMakeLists.txt  README.md  main.cpp
include/: inverted_index.hpp
src/: inverted_index.cpp
test/: CMakeLists.txt  test_document_search.cpp  test_main.cpp
